Move top of page closer to the header since header no longer expands to overflow top of page on some pages

--- a/handlereg.web.frontend/src/main/frontend/src/index.css
+++ b/handlereg.web.frontend/src/main/frontend/src/index.css
@@ -160,7 +160,7 @@
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
-    top: 19%;
+    top: 10%;
     width: 100%;
     min-height: 12%;
     z-index: 2;
